# torchmcubes

./: pyproject.toml  setup.py
