[build-system]
requires = ["setuptools", "torch", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "torchmcubes"
description = "torchmcubes: marching cubes for PyTorch"
readme = "README.md"
authors = [
    { name = "Tatsuya Yatagawa", email = "tatsy.mail@gmail.com" },
]
version="0.1.0"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
